--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -1,7 +1,2 @@
-/**
- * Basic typography style for copy text
- */
- body {
-  color: $text-color;
-  font: normal 125% / 1.4 $text-font-stack;
-}
+@use '../abstracts/variables';
+
