--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,21 +1,17 @@
 @charset "UTF-8";
 
 // Configuration and helpers
-@import
-  'abstracts/variables';
+@use 'abstracts/variables';
 
 // Base
-@import
-  'base/base',
-  'base/fonts',
-  'base/typography';
+@use 'base/base';
+@use 'base/reset';
+@use 'base/typography';
 
 // Layout-related sections
-@import
-  'layout/header',
-  'layout/footer',
-  'layout/nav';
+@use 'layout/header';
+@use 'layout/footer';
+@use 'layout/nav';
 
 // Components
-@import
-  'components/button';
+@use 'components/button';
