header and footer styling

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -2,4 +2,19 @@
 
 body {
   color: colors.$dark-color;
+  font-family: "Montserrat", sans-serif;
+}
+
+// Global hyperlinks
+a {
+  font-weight: bold;
+  color: inherit;
+  text-decoration: none;
+  display: inline-block;
+  position: relative;
+}
+
+ul {
+  padding: 0;
+  list-style-type: none;
 }
