--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -12,6 +12,8 @@
 @use 'layout/header';
 @use 'layout/footer';
 @use 'layout/nav';
+@use 'layout/layout';
+@use 'layout/container';
 
 // Components
 @use 'components/button';
