--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -5,47 +5,58 @@
 @use '../abstracts/colors';
 
 header {
-  display: flex;
-  align-items: center;
-  margin-block: 1.8rem;
-}
+  background-color: colors.$primary-color;
+  color: colors.$light-color;
 
-nav {
-  margin-left: auto;
-
-  ul {
+  div {
     display: flex;
+    align-items: center;
+    margin-block: 1.8rem;
 
-    li {
-      margin-left: 2.4rem;
+    .logo {
+      font-size: 1.75rem;
+      font-weight: normal;
+      opacity: 0.9;
+    }
 
-      a {
-        transform-origin: center;
-        transform: scale(1);
-        transition: transform .1s ease-in-out;
-
-        // &::before {
-        //   content: '';
-        //   position: absolute;
-        //   width: 100%;
-        //   height: 0.2rem;
-        //   background-color: colors.$primary-color;
-        //   bottom: -0.25rem;
-        //   left: 0;
-        //   transform-origin: center;
-        //   transform: scaleX(0);
-        //   transition: transform .3s ease-in-out;
-        // }
-      
-        &:hover {
-          color: colors.$primary-color;
-          transform: scale(1.1);
-      
-          // &::before {
-          //   transform-origin: center;
-          //   transform: scaleX(1);
-          // }
+    nav {
+      margin-left: auto;
+    
+      ul {
+        display: flex;
+    
+        li {
+          margin-left: 2.4rem;
         }
+      }
+    }
+  
+    a {
+      transform-origin: center;
+      transform: scale(1);
+      transition: transform .3s;
+  
+      // &::before {
+      //   content: '';
+      //   position: absolute;
+      //   width: 100%;
+      //   height: 0.2rem;
+      //   background-color: colors.$primary-color;
+      //   bottom: -0.25rem;
+      //   left: 0;
+      //   transform-origin: center;
+      //   transform: scaleX(0);
+      //   transition: transform .3s ease-in-out;
+      // }
+    
+      &:hover {
+        color: colors.$light-color;
+        transform: scale(1.1);
+    
+        // &::before {
+        //   transform-origin: center;
+        //   transform: scaleX(1);
+        // }
       }
     }
   }
