--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,6 +10,7 @@
 
 // Layout-related sections
 @use 'layout/header';
+@use 'layout/hero';
 @use 'layout/footer';
 @use 'layout/nav';
 @use 'layout/layout';
