--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -6,19 +6,49 @@
 
 .btn {
   padding: 0.75rem 1.5rem;
+  // background: green;
   color: colors.$light-color;
-  background-color: colors.$primary-color;
-  border-radius: 1rem;
+  // background-color: colors.$primary-color;
+  // border-radius: 1rem;
+
+  &:before,
+  &:after {
+    background: colors.$primary-color;
+    content: '';
+    display: block;
+    height: 100%;
+    left: 0;
+    position: absolute;
+    right: 0;
+    z-index: -1;
+  }
+
+  &:before {
+    top: 0;
+    transform: skew(15deg);
+    // transform-origin: 0% 0;
+  }
+
+  &:hover:before,
+  &:hover:after  {
+    background: colors.$light-color;
+    border: 1px solid colors.$primary-color;
+  }
+  
+  &:after {
+    bottom: 0;
+    transform: skew(15deg);
+    // transform-origin: 100%;
+  }
 
   transform-origin: center;
   transform: scale(1);
   transition: transform .3s;
 
-
   &:hover {
     color: colors.$primary-color;
-    background-color: colors.$light-color;
-    border: 1px solid colors.$primary-color;
+    // background-color: colors.$light-color;
+    // border: 1px solid colors.$primary-color;
 
     transform: scale(1.1);
   }
