--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -5,6 +5,7 @@
 @use '../abstracts/colors';
 
 footer {
+  margin-top: 10rem;
   padding-block: 1.8rem;
   background-color: colors.$primary-color;
 
