--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -15,7 +15,7 @@
 @use 'layout/nav';
 @use 'layout/layout';
 @use 'layout/container';
-@use 'layout/project';
+@use 'layout/works';
 
 // Components
 @use 'components/button';
