--- a/src/sass/layout/_works.scss
+++ b/src/sass/layout/_works.scss
@@ -1,12 +1,18 @@
 @use '../abstracts/colors';
 
+.row {
+// grid system
+}
+
 .card {
+  height: 100%;
   margin-top: 10rem;
 
   .card__header {
 
     .heading__link {
       border-bottom: 0.25rem solid colors.$primary-color;
+      padding-bottom: 0.25rem;
       // margin-bottom: 0.75rem;
       transform-origin: center;
       transform: scale(1);
@@ -39,6 +45,7 @@
     margin-top: 1rem;
     .tags {
       display: flex;
+      flex-wrap: wrap;
       .tag {
         font-weight: bold;
         font-size: 0.75rem;
@@ -51,11 +58,14 @@
       font-size: 1.75rem;
       display: flex;
 
+
       li {
-        margin-right: 1rem;
+        margin-right: 1.25rem;
+        text-align: center;
 
         a {
-          // color: #ffffff;
+          display: flex;
+
           transform-origin: center;
           transform: scale(1);
           transition: transform .3s;
@@ -67,4 +77,10 @@
       }
     }
   }
+}
+
+.collection {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2.75rem;
 }
