--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -2,7 +2,7 @@
 // This file contains all styles related to the header of the site/application.
 // -----------------------------------------------------------------------------
 
-@use '../abstracts/colors';
+@use "../abstracts/colors";
 
 header {
   margin-bottom: 10rem;
@@ -11,29 +11,40 @@ header {
 
   position: relative;
   z-index: 1;
-    
-    &:before,
-    &:after {
-      background: inherit;
-      content: '';
-      display: block;
-      height: 100%;
-      left: 0;
-      position: absolute;
-      right: 0;
-      z-index: -1;
-    }
-  
-    &:before {
-      top: 0;
-      transform: skewY(0deg);
-      transform-origin: 0% 0;
-    }
-    
-    &:after {
-      bottom: 0;
-      transform: skewY(-3deg);
-      transform-origin: 100%;
+
+  &:before,
+  &:after {
+    background: inherit;
+    content: "";
+    display: block;
+    height: 100%;
+    left: 0;
+    position: absolute;
+    right: 0;
+    z-index: -1;
+  }
+
+  &:before {
+    top: 0;
+    transform: skewY(0deg);
+    transform-origin: 0% 0;
+  }
+
+  &:after {
+    bottom: 0;
+    transform: skewY(-3deg);
+    transform-origin: 100%;
+  }
+
+
+    .toggle__btn {
+      display: none;
+      font-size: 1.75rem;
+      background: transparent;
+      border: none;
+      color: colors.$light-color;
+      cursor: pointer;
+      margin: 0;
     }
   
 
@@ -44,53 +55,30 @@ header {
 
     .logo {
       font-size: 1.5rem;
-      // font-weight: normal;
-      // opacity: 0.5;
-
-      // &:hover {
-      //   opacity: 1;
-      // }
     }
-
 
     nav {
       margin-left: auto;
-    
-      ul {
+      
+      .menu {
         display: flex;
-    
+        align-items: center;
+        margin: 0;
+
         li {
           margin-left: 2.4rem;
         }
       }
     }
-  
-    a {
-      transform-origin: center;
-      transform: scale(1);
-      transition: transform .3s;
-  
-      // &::before {
-      //   content: '';
-      //   position: absolute;
-      //   width: 100%;
-      //   height: 0.2rem;
-      //   background-color: colors.$primary-color;
-      //   bottom: -0.25rem;
-      //   left: 0;
-      //   transform-origin: center;
-      //   transform: scaleX(0);
-      //   transition: transform .3s ease-in-out;
-      // }
-    
+
+  a {
+    transform-origin: center;
+    transform: scale(1);
+    transition: transform 0.3s;
+
       &:hover {
         color: colors.$light-color;
         transform: scale(1.1);
-    
-        // &::before {
-        //   transform-origin: center;
-        //   transform: scaleX(1);
-        // }
       }
     }
   }
