--- a/src/sass/abstracts/_breakpoints.scss
+++ b/src/sass/abstracts/_breakpoints.scss
@@ -1,17 +1,29 @@
 @media only screen and (max-width: 1200px) {
   header {
-      .toggle__btn {
-        display: block;
-        margin-left: auto;
-      }
-    
-
     nav {
-      .menu {
-        flex-direction: column;
-        // align-items: start;
-        background: green;
+      flex-direction: column;
+      align-items: flex-start;
 
+      .toggle {
+        margin-left: auto;
+        .toggle__btn {
+          display: flex;
+        }
+      }
+
+      ul {
+        display: none;
+        flex-direction: column;
+        margin-top: 0.5rem;
+      }
+
+      
+      ul.open {
+        display: flex;
+      }
+
+      ul li {
+          text-align: right;
       }
     }
   }
