--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -35,51 +35,53 @@ header {
     transform: skewY(-3deg);
     transform-origin: 100%;
   }
-
-
-    .toggle__btn {
-      display: none;
-      font-size: 1.75rem;
-      background: transparent;
-      border: none;
-      color: colors.$light-color;
-      cursor: pointer;
-      margin: 0;
-    }
   
-
-  div {
+  nav {
     display: flex;
     align-items: center;
     margin-block: 1.8rem;
+    position: relative;
+
+    .toggle {
+    position: absolute;
+    right: 0;
+    flex-direction: column;
+    justify-content: space-between;
+
+      .toggle__btn {
+        display: none;
+        font-size: 1.75rem;
+        background: transparent;
+        border: none;
+        color: colors.$light-color;
+        cursor: pointer;
+        margin: 0;
+        padding: 0;
+      }
+    }
+
+    a {
+      transform-origin: center;
+      transform: scale(1);
+      transition: transform 0.3s;
+  
+      &:hover {
+        color: colors.$light-color;
+        transform: scale(1.1);
+      }
+    }
 
     .logo {
       font-size: 1.5rem;
     }
 
-    nav {
+    ul {
       margin-left: auto;
+      display: flex;
       
-      .menu {
-        display: flex;
-        align-items: center;
-        margin: 0;
-
         li {
           margin-left: 2.4rem;
         }
-      }
-    }
-
-  a {
-    transform-origin: center;
-    transform: scale(1);
-    transition: transform 0.3s;
-
-      &:hover {
-        color: colors.$light-color;
-        transform: scale(1.1);
-      }
     }
   }
 }
