--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,5 +1,5 @@
 // -----------------------------------------------------------------------------
-// This file contains all styles related to the header of the site/application.
+// This file contains all styles related to the header of the site.
 // -----------------------------------------------------------------------------
 
 @use "../abstracts/colors";
@@ -12,29 +12,29 @@ header {
   position: relative;
   z-index: 1;
 
-  &:before,
-  &:after {
-    background: inherit;
-    content: "";
-    display: block;
-    height: 100%;
-    left: 0;
-    position: absolute;
-    right: 0;
-    z-index: -1;
-  }
+    &:before,
+    &:after {
+      background: inherit;
+      content: "";
+      display: block;
+      height: 100%;
+      left: 0;
+      position: absolute;
+      right: 0;
+      z-index: -1;
+    }
 
-  &:before {
-    top: 0;
-    transform: skewY(0deg);
-    transform-origin: 0% 0;
-  }
+    &:before {
+      top: 0;
+      transform: skewY(0deg);
+      transform-origin: 0% 0;
+    }
 
-  &:after {
-    bottom: 0;
-    transform: skewY(-3deg);
-    transform-origin: 100%;
-  }
+    &:after {
+      bottom: 0;
+      transform: skewY(-3deg);
+      transform-origin: 100%;
+    }
   
   nav {
     display: flex;
