--- a/src/sass/layout/_works.scss
+++ b/src/sass/layout/_works.scss
@@ -1,79 +1,81 @@
+// -----------------------------------------------------------------------------
+// This file contains all styles related to the works section of the site.
+// -----------------------------------------------------------------------------
+
 @use '../abstracts/colors';
 
 .collection {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 2.75rem;
-}
 
-.card {
-  height: 100%;
-  margin-top: 10rem;
-
-  .card__header {
-
-    .heading__link {
-      border-bottom: 0.25rem solid colors.$primary-color;
-      padding-bottom: 0.25rem;
-      // margin-bottom: 0.75rem;
-      transform-origin: center;
-      transform: scale(1);
-      transition: transform .3s;
-
-      &:hover {
-        transform: scale(1.1);
+  .card {
+    height: 100%;
+    margin-top: 10rem;
+  
+    .card__header {
+      .heading__link {
+        border-bottom: 0.25rem solid colors.$primary-color;
+        padding-bottom: 0.25rem;
+        transform-origin: center;
+        transform: scale(1);
+        transition: transform .3s;
+  
+        &:hover {
+          transform: scale(1.1);
+        }
       }
-    }
 
-    .heading {
-      font-size: 2rem;
-      margin-bottom: 0;
-      margin-top: 0.75rem;
-    }
-  
-    .subheading {
-      font-weight: bold;
-      color: colors.$primary-color;
-      text-transform: uppercase;
-      letter-spacing: 0.25rem;
-    }
-  }
-  
-  .card__body {
-    margin-block: 1.25rem;
-  }
-  
-  .card__footer {
-    margin-top: 1rem;
-    .tags {
-      display: flex;
-      flex-wrap: wrap;
-      .tag {
+      .heading {
+        font-size: 2rem;
+        margin-bottom: 0;
+        margin-top: 0.75rem;
+      }
+
+      .subheading {
         font-weight: bold;
-        font-size: 0.75rem;
-        margin-right: 0.75rem;
+        color: colors.$primary-color;
+        text-transform: uppercase;
+        letter-spacing: 0.25rem;
       }
     }
     
-    .external {
+    .card__body {
+      margin-block: 1.25rem;
+    }
+
+    .card__footer {
       margin-top: 1rem;
-      font-size: 1.75rem;
-      display: flex;
 
+      .tags {
+        display: flex;
+        flex-wrap: wrap;
 
-      li {
-        margin-right: 1.25rem;
-        text-align: center;
-
-        a {
-          display: flex;
-
-          transform-origin: center;
-          transform: scale(1);
-          transition: transform .3s;
-
-          &:hover {
-            transform: scale(1.2);
+        .tag {
+          font-weight: bold;
+          font-size: 0.75rem;
+          margin-right: 0.75rem;
+        }
+      }
+      
+      .external {
+        margin-top: 1rem;
+        font-size: 1.75rem;
+        display: flex;
+  
+        li {
+          margin-right: 1.25rem;
+          text-align: center;
+  
+          a {
+            display: flex;
+            transform-origin: center;
+            transform: scale(1);
+            transition: transform .3s;
+  
+            &:hover {
+              transform: scale(1.2);
+            }
           }
         }
       }
