--- a/src/sass/abstracts/_breakpoints.scss
+++ b/src/sass/abstracts/_breakpoints.scss
@@ -4,8 +4,13 @@
       flex-direction: column;
       align-items: flex-start;
 
+      .logo {
+        margin-top: -5px;
+      }
+
       .toggle {
         margin-left: auto;
+
         .toggle__btn {
           display: flex;
         }
